--- a/src/components/PageHeader/_mixins.scss
+++ b/src/components/PageHeader/_mixins.scss
@@ -1,4 +1,4 @@
-@import "../../styles/breakpoints";
+@import '../../styles/breakpoints';
 
 @mixin PageHeader-padding($attr-name) {
   #{$attr-name}: 56px;
